[~] Fixed Button Spacing on Reference Slider

--- a/app/client/src/scss/elements/ReferenceSliderElement.scss
+++ b/app/client/src/scss/elements/ReferenceSliderElement.scss
@@ -66,5 +66,9 @@ section.section--ReferenceSliderElement {
                 grid-template-columns: repeat(1, calc(100% / 1));
             }
         }
+
+        .section_button {
+            margin-top: 20px;
+        }
     }
 }
